Fix overflow for table cells

--- a/style.css
+++ b/style.css
@@ -130,10 +130,11 @@ table {
 
 td, th {
   height: 3rem;
-  min-width: 3rem;
-  overflow-x: scroll; /* check how table was fixed in plttr 1 */
+  min-width: 5rem;
+  overflow: scroll; /* check how table was fixed in plttr 1 */
+  white-space: nowrap;
   outline: none;
-  padding: 0 1em;
+  padding: 0 3vw;
 }
 
 th.exclude, td.exclude {
